--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,33 +1,33 @@
-.header {
-  background: black;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
+// .header {
+//   background: black;
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: center;
+// }
 
-.header__title {
-  color: white;
-  text-decoration: none;
-  h1 {
-    margin: 0;
-  }
-}
+// .header__title {
+//   color: white;
+//   text-decoration: none;
+//   h1 {
+//     margin: 0;
+//   }
+// }
 
-.header__content {
-  font-size: $m-size;
-  line-height: 1.6;
-  height: 9.7rem;
-  padding: 0;
-  margin: 0;
-}
+// .header__content {
+//   font-size: $m-size;
+//   line-height: 1.6;
+//   height: 9.7rem;
+//   padding: 0;
+//   margin: 0;
+// }
 
-.header__sticky {
-  position: sticky;
-  top: 0;
-  z-index: 9999;
-}
+// .header__sticky {
+//   position: sticky;
+//   top: 0;
+//   z-index: 9999;
+// }
 
-.color {
-  width: 100%;
-}
+// .color {
+//   width: 100%;
+// }
