--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,53 +1,28 @@
-html {
-  font-size: 62.5%;
-}
-.linkWrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 .homeWrap {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //background-color: black;
-  font-size: $m-size;
-  line-height: 1.6;
   height: 100vh;
-  padding: 0;
-  margin: 0;
-  overflow-y: none;
-  @media (min-height: 750px) {
-    overflow-y: hidden;
-  }
+  width: 100vw;
+  text-align: middle;
 }
-.home-back {
-  //background-color: black;
+.homeNavWrap {
   display: flex;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  padding-top: $s-size;
-  padding-bottom: 0;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently*/
+  text-align: center;
 }
-.noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+.link {
+  text-decoration: none;
+  text-align: center;
 }
-.homeButt {
+.homeTitle {
+  font-size: $font-size-header;
+  margin: 2rem 0;
+}
+.homeNavButton {
   text-decoration: none;
   font-weight: bold;
   width: 10rem;
@@ -56,107 +31,24 @@ html {
   transition: background 0.25s linear, color 0.25s ease;
 
   &:hover {
-    background: white;
+    background: $white-text;
     color: black;
     //background: transparent;
-    //color: white;
+    //color: $white-text;
   }
 
-  font-size: 1.5rem;
-  color: white;
+  font-size: $font-size-large;
+  color: $white-text;
   // border-style: solid;
   // border-width: 5px;
-  // color: white;
-  // border-color: white;
-  //background: white;
+  // color: $white-text;
+  // border-color: $white-text;
+  //background: $white-text;
   //color: black;
-  color: white;
   background: transparent;
 }
-.blurFilter {
-  //transition: filter 0.25s ease, -webkit-filter 0.25s ease;
-  //-webkit-filter: blur(2px);
-  //  filter: blur(2px);
-  &:hover {
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
-    ////background: white;
-    ////color: black;
-    //background: transparent;
-    //color: white;
-  }
-}
-.hometilt {
-  height: 100%;
-  width: 100%;
-  overflow: none;
-
-  background: black;
-}
-
-.desc-wrap {
-  color: white;
-  display: flex;
-  flex-direction: row;
-  justify-content: stretch;
-  white-space: nowrap;
-  line-height: 3vh;
-  font-size: 1.05rem;
-  color: $background-grey;
-  @media (min-width: $desktop-breakpoint) {
-    line-height: 0;
-  }
-}
-
-.text {
-  color: white;
-  font-weight: 900;
-  font-size: 5rem;
-}
-
-.lorem-rem {
-  @media (max-width: $desktop-breakpoint) {
-    display: none;
-  }
-}
-
-.underline--magical {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.4vh;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -webkit-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -ms-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-    color: black;
-  }
-}
-
-.underline--magical-not {
-  color: black;
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.4vh;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -webkit-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -ms-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-  }
-}
-.link-not {
-  text-decoration: none;
-  color: black;
-}
-.link {
-  text-decoration: none;
-  color: white;
-}
 .hvr-outline-out {
-  text-align: center;
+  text-align: middle;
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -167,7 +59,7 @@ html {
 .hvr-outline-out:before {
   content: "";
   position: absolute;
-  border: white solid 4px;
+  border: $white-text solid 4px;
   top: 0;
   right: 0;
   bottom: 0;
@@ -185,3 +77,134 @@ html {
   bottom: -8px;
   left: -8px;
 }
+
+// .linkWrapper {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+// }
+// .homeWrap {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   //background-color: black;
+//   font-size: $m-size;
+//   line-height: 1.6;
+//   height: 100vh;
+//   padding: 0;
+//   margin: 0;
+//   overflow-y: none;
+//   @media (min-height: 750px) {
+//     overflow-y: hidden;
+//   }
+// }
+// .home-back {
+//   //background-color: black;
+//   display: flex;
+//   justify-content: space-around;
+//   align-items: center;
+//   flex-direction: column;
+//   padding-top: $s-size;
+//   padding-bottom: 0;
+//   -webkit-touch-callout: none; /* iOS Safari */
+//   -webkit-user-select: none; /* Safari */
+//   -khtml-user-select: none; /* Konqueror HTML */
+//   -moz-user-select: none; /* Firefox */
+//   -ms-user-select: none; /* Internet Explorer/Edge */
+//   user-select: none; /* Non-prefixed version, currently*/
+// }
+// .noselect {
+//   -webkit-touch-callout: none; /* iOS Safari */
+//   -webkit-user-select: none; /* Safari */
+//   -khtml-user-select: none; /* Konqueror HTML */
+//   -moz-user-select: none; /* Firefox */
+//   -ms-user-select: none; /* Internet Explorer/Edge */
+//   user-select: none; /* Non-prefixed version, currently
+//                                   supported by Chrome and Opera */
+// }
+
+// .blurFilter {
+//   text-align: center;
+//   //transition: filter 0.25s ease, -webkit-filter 0.25s ease;
+//   //-webkit-filter: blur(2px);
+//   //  filter: blur(2px);
+//   &:hover {
+//     -webkit-filter: blur(0px);
+//     filter: blur(0px);
+//     ////background: $white-text;
+//     ////color: black;
+//     //background: transparent;
+//     //color: $white-text;
+//   }
+// }
+// .hometilt {
+//   height: 100%;
+//   width: 100%;
+//   overflow: none;
+
+//   background: black;
+// }
+
+// .desc-wrap {
+//   color: $white-text;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: stretch;
+//   $white-text-space: nowrap;
+//   line-height: 3vh;
+//   font-size: 1.05rem;
+//   color: $background-grey;
+//   @media (min-width: $desktop-breakpoint) {
+//     line-height: 0;
+//   }
+// }
+
+// .text {
+//   color: $white-text;
+//   font-weight: 900;
+//   font-size: 5rem;
+// }
+
+// .lorem-rem {
+//   @media (max-width: $desktop-breakpoint) {
+//     display: none;
+//   }
+// }
+
+// .underline--magical {
+//   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+//   background-repeat: no-repeat;
+//   background-size: 100% 0.4vh;
+//   background-position: 0 88%;
+//   transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   -webkit-transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   -ms-transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   &:hover {
+//     background-size: 100% 88%;
+//     color: black;
+//   }
+// }
+
+// .underline--magical-not {
+//   color: black;
+//   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+//   background-repeat: no-repeat;
+//   background-size: 100% 0.4vh;
+//   background-position: 0 88%;
+//   transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   -webkit-transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   -ms-transition: background-size 0.25s ease-in, color 0.25s ease-in;
+//   &:hover {
+//     background-size: 100% 88%;
+//   }
+// }
+// .link-not {
+//   text-decoration: none;
+//   color: black;
+// }
+// .link {
+//   text-decoration: none;
+//   color: $white-text;
+// }
