looking at styling headers

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -32,7 +32,7 @@
 
   &:hover {
     background: $white-text;
-    color: black;
+    color: $background-grey;
     //background: transparent;
     //color: $white-text;
   }
