--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -30,6 +30,17 @@ body {
 html {
   font-size: 62.5%;
 }
+.content-container {
+  margin: 0 auto;
+  //max-width: 120rem;
+  max-width: 90vw;
+  padding: 0 $xs-size;
+  flex-grow: 1;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+}
 // ::-webkit-scrollbar {
 //   width: 8px;
 //   height: 8px;
