--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: 3rem;
   div {
     margin: 3rem 4rem;
 
@@ -17,6 +18,123 @@
       font-size: $font-size-header;
       color: $white-text;
     }
+  }
+}
+// === Variables =====
+$perspective: 60rem;
+$font-size: 8.25rem;
+$split-position: 49%;
+$split-thickness: 8px;
+$split-color: #ff2c75;
+
+// === Settings =====
+
+// === Menu <ul> =====
+// .Menu-list {
+//   font-size: $font-size;
+//   line-height: 1.2;
+//   text-transform: uppercase;
+//   text-align: center;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   transform: rotateX(-10deg) rotateY(20deg); // overwritten by JS
+// }
+
+// === Menu item =====
+.Menu-list-item {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  cursor: pointer;
+  color: transparent;
+
+  margin: 0 8rem;
+  text-decoration: none;
+  font-size: 7rem;
+  // === Split Line =====
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 80%;
+    left: -30%;
+    right: -10%;
+    height: $split-thickness;
+    border-radius: $split-thickness;
+    margin-top: -($split-thickness / 1.52);
+    background: $split-color;
+    transform: scale(0) translateX(-80px) rotate(-45deg);
+    transition: transform 0.7s cubic-bezier(0.16, 1.08, 0.38, 0.98);
+    z-index: 1;
+  }
+}
+
+// === Top/bottom mask =====
+.Mask {
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  color: $split-color;
+  height: 180%;
+  width: 100%;
+  transition: all 0.8s cubic-bezier(0.16, 1.08, 0.38, 0.98);
+  transform: rotate(-45deg);
+  span {
+    display: block;
+  }
+}
+.Laks {
+  position: absolute;
+  top: 0;
+  transform: translateY(-30px) translateX(-110px) rotate(-45deg);
+  transition: all 0.5s cubic-bezier(0.16, 1.08, 0.38, 0.98);
+  span {
+    transform: rotate(45deg) translateX(110px) translateY(30px);
+  }
+}
+// === Bottom mask specific =====
+.Mask + .Mask {
+  bottom: -129%;
+  transform: translateX(50px) translateY(-50px) rotate(-45deg);
+  transition: all 0.5s cubic-bezier(0.16, 1.08, 0.38, 0.98);
+  span {
+    transform: rotate(45deg) translateY(-$split-position) translateY(50px) translateX(-50px);
+  }
+}
+
+// === Where the fun stuff happens =====
+.Menu-list-item:hover,
+.Menu-list-item:active {
+  .Mask {
+    color: #fff;
+  }
+  .Laks {
+    position: absolute;
+    top: 0;
+    transform: translateY(-30px) translateX(-130px) rotate(-45deg);
+  }
+  .Mask + .Mask {
+    transform: translateX(40px) translateY(-40px) rotate(-45deg);
+  }
+  &::before {
+    transform: scale(1) translateX(-30px) rotate(-45deg);
+  }
+}
+.ActiveMenu {
+  .Mask {
+    color: #fff;
+  }
+  .Laks {
+    position: absolute;
+    top: 0;
+    transform: translateY(-30px) translateX(-130px) rotate(-45deg);
+  }
+  .Mask + .Mask {
+    transform: translateX(40px) translateY(-40px) rotate(-45deg);
+  }
+  &::before {
+    transform: scale(1) translateX(-30px) rotate(-45deg);
   }
 }
 // .header {
