--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,20 @@
 // Colors
-$background-grey: #222222;
-$subtitle-grey: #484647;
+$background-grey: #0c030b;
+// $background-grey: #222222;
+$subtitle-grey: #bcafb7;
+$secondary-color: #cb0d83;
+$third-color: #3cd7c1;
+// $subtitle-grey: #484647;
 $white-text: #fafafa;
-
+// $white-text: #eee6e3;
+// === Variables =====
+$perspective: 60rem;
+$font-size: 8.25rem;
+$split-position: 49%;
+$split-thickness: 8px;
+$split-line: #175b8e;
+$split-color: #15a5c5;
+// $split-color: #ff2c75;
 // // Colors
 // $dark-grey: #333333;
 // $grey: #666666;
