--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import "./components/contact";
 @import "./components/about";
 @import "./components/projectCard";
+@import "./components/blogCard";
