fix some formatting

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -132,11 +132,15 @@
   color: white;
   font-size: 3rem;
 }
+.showIconWrap {
+  display: flex;
+  flex-direction: column;
+}
 .singleIcon {
-display:flex;
-flex-direction: column;
-justify-content: flex-start;
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .skillWrap {
   display: flex;
@@ -147,7 +151,7 @@ justify-content: flex-start;
   padding: 4rem 0;
   height: 100vh;
   background-image: linear-gradient(to bottom right, $third-color, $secondary-color);
- // background-image: linear-gradient(to bottom right, #fc00ff, #00dbde);
+  // background-image: linear-gradient(to bottom right, #fc00ff, #00dbde);
 }
 .skillText {
   font-size: 5rem;
@@ -157,24 +161,23 @@ justify-content: flex-start;
   position: absolute;
   z-index: 99;
 }
-.wrapEveryAbout{
- font-size: 2rem;
- div {
- margin-bottom: 1.5rem;
- }
+.wrapEveryAbout {
+  font-size: 2rem;
+  div {
+    margin-bottom: 1.5rem;
+  }
 }
-.testImage{
-	-webkit-filter: grayscale(20%) hue-rotate(90deg); /* Safari 6.0 - 9.0 */
+.testImage {
+  -webkit-filter: grayscale(20%) hue-rotate(90deg); /* Safari 6.0 - 9.0 */
   filter: grayscale(20%) hue-rotate(300deg);
-
 }
-.aboutParticle{
-	position: absolute;
-	top:0;
-	left:0;
-	right:0;
-	width:100vw;
-	height:100vh;
-	bottom:0;
-	z-index:-1;
+.aboutParticle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  bottom: 0;
+  z-index: -1;
 }
