--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "./base/settings";
 @import "./base/base";
+@import "./base/all.min.scss";
 @import "./components/header";
 @import "./components/blog-project-layouts";
 @import "./components/blog-project-post";
