--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,7 +2,7 @@
 $background-grey: #0c030b;
 // $background-grey: #222222;
 $subtitle-grey: #bcafb7;
-$secondary-color: #cb0d83;
+$secondary-color: lighten(#cb0d83, 5%);
 $third-color: #3cd7c1;
 // $subtitle-grey: #484647;
 $white-text: #fafafa;
