--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -10,15 +10,51 @@
   align-items: center;
   font-size: 2rem;
 }
+.aboutHeader {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
 .columnWrap {
+  width: 100%;
+  height: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 100%;
+
   & > div {
+    position: relative;
+    width: 30%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: $background-grey;
+    border: 1rem solid transparent;
+
+    // border: 1rem solid darken($secondary-color, 10%);
+    // border-left-color: lighten($secondary-color, 10%);
+    // border-top-color: lighten($secondary-color, 10%);
+    &:before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      z-index: -1;
+      padding: 2rem;
+      background: linear-gradient(
+        to bottom right,
+        darken($secondary-color, 10%),
+        lighten($secondary-color, 10%)
+      );
+    }
   }
+}
+.skillIcon {
+  fill: $secondary-color;
+  width: 100%;
 }
 .icon {
   height: 6vw;
