--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,6 +4,7 @@ $background-grey: #0c030b;
 $subtitle-grey: #bcafb7;
 $secondary-color: lighten(#cb0d83, 5%);
 $third-color: #3cd7c1;
+$fourth-color: #39d34f;
 // $subtitle-grey: #484647;
 $white-text: #fafafa;
 // $white-text: #eee6e3;
